--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marcmayol.github.io",
-  "homepage": "https://marcmayol.github.io/",
+  "homepage": "https://marcmayol.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.0",
     "react-schemaorg": "^2.0.0",
     "react-scripts": "^2.1.3",
