--- a/package.json
+++ b/package.json
@@ -11,21 +11,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
-    "bootstrap": "^5.2.3",
     "framer-motion": "^11.5.6",
     "gh-pages": "^5.0.0",
     "lucide-react": "^0.445.0",
     "postcss": "^8.4.47",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.26.2",
-    "react-schemaorg": "^2.0.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "reactui": "^0.0.7",
-    "schema-dts": "^1.1.5",
     "shadcn-ui": "^0.2.3",
     "ui": "^0.2.4",
     "web-vitals": "^2.1.4"
