ajsute lsitado blog titulo y mejorar rutas internas y arerglar boton blog home

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "marcmayol.github.io",
-  "homepage": "https://marcmayol.github.io",
+  "name": "marcmayol.com",
+  "homepage": "https://marcmayol.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
